# rust-workspaces

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
kani-tutorial/arbitrary-variables/: Cargo.toml
kani-tutorial/arbitrary-variables/src/: exercise_solution.rs  inventory.rs  lib.rs  rating.rs
kani-tutorial/first-steps-v1/: Cargo.toml
kani-tutorial/first-steps-v1/src/: lib.rs
kani-tutorial/first-steps-v2/: Cargo.toml
kani-tutorial/first-steps-v2/src/: lib.rs
kani-tutorial/kinds-of-failure/: Cargo.toml
kani-tutorial/kinds-of-failure/proptest-regressions/: bounds_check.txt  overflow.txt
kani-tutorial/kinds-of-failure/src/: bounds_check.rs  lib.rs  overflow.rs  overflow_quicksort.rs
kani-tutorial/loops-unwinding/: Cargo.toml
kani-tutorial/loops-unwinding/src/: lib.rs
rig-playground/: Cargo.toml  README.md
rig-playground/src/: lib.rs  main.rs  main_extractor.rs  main_rag.rs  main_tool.rs
work/kani/: Cargo.toml
work/kani/src/: lib.rs  test.rs
work/rust-linter/: Cargo.toml
work/rust-linter/src/: backend.rs  lib.rs  main.rs
work/rust-linter/tests/: test_linter.rs
work/stack-graphs-example/: Cargo.toml  README.md
work/stack-graphs-example/src/: main.rs
work/tree-sitter-stack-graphs/: Cargo.toml  README.md
work/tree-sitter-stack-graphs/src/: dot_export.rs  main.rs
work/tree-sitter-stack-graphs/tests/: stack_graph_test.rs
work/tree-sitter-stack-graphs/tests/snapshots/: stack_graph_test__basic_graph_construction.snap
