[package]
name = "rig-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
rig = { package = "rig-core", version = "0.0.6" }
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"
serde_json = "1.0"
thiserror = "1.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "main_rag"
path = "src/main_rag.rs"

[[bin]]
name = "main_tool"
path = "src/main_tool.rs"

[[bin]]
name = "main_extractor"
path = "src/main_extractor.rs"
