[package]
name = "rust-linter"
version = "0.1.0"
edition = "2021"
description = "OpenAI APIを使用したRustコードの品質とセキュリティ分析ツール"
authors = ["Devin <devin@example.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "rust-linter"
path = "src/main.rs"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "test-util", "macros"] }
tower-lsp = { version = "0.20.0", features = ["proposed", "runtime-tokio"] }
async-trait = "0.1.74"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
tower = { version = "0.4", features = ["util"] }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
tower-test = "0.4"
async-trait = "0.1.74"
